New project structure :)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /nbproject/private/
 /build/Debug/
 /dist/Debug/
+/libopenstip/nbproject/private/
+/stviewer/nbproject/private/
+/stviewer/build/Debug/
+/stviewer/dist/Debug/
+/libopenstip/build/Debug/
+/libopenstip/dist/Debug/
