--- a/stviewer/stviewer.vcxproj
+++ b/stviewer/stviewer.vcxproj
@@ -51,12 +51,13 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <AdditionalIncludeDirectories>..\libopenstip\inc;.\inc;C:\OpenCV2.2\include;..\extdep\glfw-win32\include;..\extdep\AntTweakBar\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\libopenstip\inc;.\inc;C:\OpenCV2.2\include;..\extdep\glfw-win32\include;..\extdep\AntTweakBar\include;C:\boost</AdditionalIncludeDirectories>
       <CompileAsManaged>false</CompileAsManaged>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libopenstip.lib;opencv_core220d.lib;opencv_imgproc220d.lib;opencv_highgui220d.lib;GLFW.lib;AntTweakBar.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>VCOMPD.LIB;libopenstip.lib;opencv_core220d.lib;opencv_imgproc220d.lib;opencv_highgui220d.lib;GLFW.lib;AntTweakBar.lib;opengl32.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>..\build_vs2010\Debug;C:\OpenCV2.2\lib;..\extdep\glfw-win32\lib-msvc100\debug;..\extdep\AntTweakBar\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
